--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -11,3 +11,22 @@
   padding: 0;
   margin: 0;
 }
+
+.btn-sidebar {
+    display: inline-block;
+    padding: 8px 16px;
+    border-radius: 4px;
+    text-decoration: none;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.btn-login {
+    background-color: #007bff; /* Azul */
+    color: white !important;
+}
+
+.btn-logout {
+    background-color: #dc3545; /* Rojo */
+    color: white !important;
+}
