--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -29,7 +29,7 @@
                 <li>
                   <form id="logout-form" method="post" action="{% url 'logout' %}">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-link">Logout</button>
+                    <button type="submit" class="btn-sidebar btn-logout">Logout</button>
                   </form>
                 </li>
                 {% if perms.catalog.can_mark_returned %}
@@ -37,8 +37,21 @@
                   <p>Staff</p>
                   <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
                 {% endif %}
+                {% if user.is_staff %}
+                  <hr>
+                  <ul class="sidebar-nav">
+                  <li>Staff</li>
+                    <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
+                  {% if perms.catalog.add_author %}
+                    <li><a href="{% url 'author-create' %}">Create author</a></li>
+                  {% endif %}
+                  {% if perms.catalog.add_book %}
+                    <li><a href="{% url 'book-create' %}">Create book</a></li>
+                  {% endif %}
+                  </ul>
+                {% endif %}
               {% else %}
-                <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+                <li><a href="{% url 'login' %}?next={{ request.path }}" class="btn-sidebar btn-login">Login</a></li>
               {% endif %}
             </ul>
           {% endblock %}
@@ -66,5 +79,9 @@
         </div>
       </div>
     </div>
+    <hr style="border: 0; border-top: 1px solid #7f7e7e; margin: 20px 0;">
+    <footer style="text-align: center; padding: 20px; font-style: italic;">
+        <p>&copy; Page created by: Janira Púa Calero y Javier Jiménez García</p>
+    </footer>
   </body>
 </html>
