--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block content %}
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'css/frontpage-styles.css' %}">
   <h1>Local Library Home</h1>
   <p>
     Welcome to LocalLibrary, a website developed by
@@ -12,12 +14,12 @@
   </p>
   <h2>Dynamic content</h2>
   <p>The library has the following record counts:</p>
-  <ul>
+  <ul class="stats-list">
     <li><strong>Books:</strong> {{ num_books }}</li>
     <li><strong>Copies:</strong> {{ num_instances }}</li>
     <li><strong>Copies available:</strong> {{ num_instances_available }}</li>
     <li><strong>Authors:</strong> {{ num_authors }}</li>
-    <li><strong>Genres:</strong> {{ genres|join:", " }}</li>
+    <li><strong>Genres:</strong> {{ num_genres }}</li>
     <li><strong>Genres with the word "{{ genres_word }}":</strong> {{ num_genres_word }}</li>
     <li><strong>Books containing the letter '{{ books_word }}' in the title:</strong> {{ num_books_word }}</li>
   </ul>
@@ -27,4 +29,3 @@
   </p>
 {% endblock %}
 
-<!--<li><strong>Books with the word "{{books_word }}":</strong> {{ num_books_word }}</li>-->>
